# mintlify-graphql-docs-generator

./: .gitignore  CLAUDE.md  PLAN.md  README.md  cli.py  docsjson.py  mdx_writer.py  models.py  parser.py  pyproject.toml  type_render.py  utils.py
examples/: sample.graphql
tests/: test_generator.py
